<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".intern.InternEditProfile"
    android:orientation="vertical"
    android:padding="20dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:text="@string/edit_profile"
                android:gravity="center"
                android:textColor="@color/blue"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/name"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/et_editInternName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Name"
                android:textSize="14dp"
                android:ems="10"
                android:inputType="text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/contact_number"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/et_editInternContactNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Contact Number"
                android:textSize="14dp"
                android:ems="10"
                android:inputType="text|number"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/about"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/et_editInternAbout"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:ems="10"
                android:inputType="text|textMultiLine"
                android:gravity="top|left"
                android:textSize="14dp"
                android:hint="Introduce yourself"
                android:lines="20"
                android:minLines="5"
                android:scrollHorizontally="false"
                android:scrollbars="vertical"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/educationn"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/school"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/et_editInternSchool"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="School Name"
                android:textSize="14dp"
                android:ems="10"
                android:inputType="text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/course"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/et_editInternCourse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Course"
                android:textSize="14dp"
                android:ems="10"
                android:inputType="text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/expected_graduation_year"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/et_editInternGradYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Graduation year"
                android:textSize="14dp"
                android:ems="10"
                android:inputType="date"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:gravity="center|bottom"
                android:orientation="vertical"
                android:layout_weight="1">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_editInternSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/blue"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_editInternCancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>

    <com.google.android.material.navigation.NavigationView
    android:id="@+id/nav_internSideMenu"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    app:menu="@menu/nav_intern_menu"
    android:fitsSystemWindows="true"/>
</androidx.drawerlayout.widget.DrawerLayout>