<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".intern.InternMenu"
    android:padding="20dp">

    <TextView
        android:id="@+id/tv_internMenuTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/internship_connect"
        android:textAlignment="center"
        android:textSize="48dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:textColor="@color/blue"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_internMenuGreeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:text="Hello name!"
        app:layout_constraintTop_toBottomOf="@+id/tv_internMenuTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/black"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_internMenuJobs"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/jobs"
        app:layout_constraintTop_toBottomOf="@+id/tv_internMenuGreeting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/blue"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_internMenuMyJobs"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/my_jobs"
        app:layout_constraintTop_toBottomOf="@+id/btn_internMenuJobs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/blue"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_internMenuCompanies"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/companies"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_internMenuMyJobs"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/blue"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_internMenuProfile"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_internMenuCompanies"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/blue"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_internMenuLogout"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_internMenuProfile"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/blue"/>

</androidx.constraintlayout.widget.ConstraintLayout>