<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".company.CompanyEditProfile"
        android:orientation="vertical"
        android:padding="20dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:text="@string/edit_profile"
                    android:gravity="center"
                    android:textColor="@color/blue"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/company_name"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"/>

                <EditText
                    android:id="@+id/et_editCompanyCompanyName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Company Name"
                    android:inputType="text"
                    android:textSize="14dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/industry"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"/>

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner_industry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:entries="@array/industry_list"
                    android:layout_marginTop="5dp"
                    android:textSize="14dp"
                    />



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/about"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"/>

                <EditText
                    android:id="@+id/et_editCompanyAbout"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:hint="Provide a short description"
                    android:textSize="14dp"
                    android:ems="10"
                    android:inputType="text|textMultiLine"
                    android:gravity="top|left"
                    android:lines="20"
                    android:minLines="5"
                    android:scrollHorizontally="false"
                    android:scrollbars="vertical"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/contact_number"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"/>

                <EditText
                    android:id="@+id/et_editCompanyContactNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Contact Number"
                    android:ems="10"
                    android:inputType="text|number"
                    android:textSize="14dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/location"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"/>

                <EditText
                    android:id="@+id/et_editCompanyLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Location"
                    android:textSize="14dp"
                    android:inputType="text"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/websitee"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"/>

                <EditText
                    android:id="@+id/et_editCompanyWebsite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Website"
                    android:textSize="14dp"
                    android:ems="10"
                    android:inputType="textUri"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:gravity="center|bottom"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_editCompanySave"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/save"
                        android:backgroundTint="@color/blue"
                        android:textColor="@color/white"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_editCompanyCancel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cancel"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_companySideMenu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/nav_company_menu"
        android:fitsSystemWindows="true"/>
</androidx.drawerlayout.widget.DrawerLayout>